# SofaSkeletonPlugin

./: CMakeLists.txt  License.txt  MeshSkeletonization.cpp  MeshSkeletonizationPlugin.txt  MeshSkeletonizationPluginConfig.cmake.in  README.md  SkeletonPlugin.txt
SkeletonPlugin/: CMakeLists.txt  MeshSkeletonization.cpp  MeshSkeletonization.h  MeshSkeletonization.inl  SkeletonPluginConfig.cmake.in  initSkeletonPlugin.cpp
SkeletonPlugin/scenes/: MeshSkeletonization.scn
data/skeletons/: output_elephant_skeleton.txt  output_raptor_skeleton.txt  output_vessels_skeleton.txt
scenes/: BeamFEMSkeleton.scn  MeshSkeletonization.scn  elephant_skeleton.scn  raptor_skeleton.scn  vessel_skeleton.scn
src/: MeshSkeletonization.cpp  MeshSkeletonization.h  MeshSkeletonization.inl  config.h.in  initMeshSkeletonizationPlugin.cpp
src/MeshSkeletonizationPlugin/: MeshSkeletonization.cpp  MeshSkeletonization.h  MeshSkeletonization.inl  config.h.in  init.cpp  init.h  initMeshSkeletonizationPlugin.cpp
